[FIX] Add higher z-index

--- a/components/Nav/styles.module.scss
+++ b/components/Nav/styles.module.scss
@@ -43,7 +43,8 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  z-index: 4;
+  z-index: 101;
+  position: relative;
   padding: 0.5rem;
 
   div {
